<?xml version="1.0"?>
<package>
    <name>sonar_to_laserscan</name>
    <version>1.3.0</version>
    <description>sonar with laser.</description>
    <maintainer email="gym8119@mail.ustc.edu.cn">Gu Yumao</maintainer>
    <author email="gym8119@mail.ustc.edu.cn">Gu Yumao</author>

    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_filters</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>

    <run_depend>message_filters</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>tf2_sensor_msgs</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
